On IE the filters were being displayed over the floating bar, only on desktop, once inside of TeamSite. Setting the index to auto should fix the issue.

--- a/src/app/calendar-filter-container/calendar-filter-container.component.css
+++ b/src/app/calendar-filter-container/calendar-filter-container.component.css
@@ -399,6 +399,7 @@ div.bottom-sheet{
   .middle-container {
     top: 0;
     bottom: 0;
+    z-index: auto;
   }
 
   div.bottom-sheet {
